# samey

./: CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: metrics.md
examples/: README.md  collapsed.jsonl  diverse.txt
scripts/: smoke.sh
src/samey/: __init__.py  __main__.py  cli.py  distinct.py  dupes.py  phrases.py  reader.py  report.py  selfsim.py  textnorm.py
tests/: conftest.py  test_cli.py  test_distinct.py  test_dupes.py  test_phrases.py  test_reader.py  test_report.py  test_selfsim.py  test_textnorm.py
