[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "samey"
version = "0.1.0"
description = "Measures output diversity and mode collapse: distinct-n, self-similarity, duplicate clusters over generations."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JaydenCJ", email = "aisingioro.kiyon@gmail.com" }]
keywords = ["diversity", "mode-collapse", "distinct-n", "synthetic-data", "deduplication", "evaluation", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
samey = "samey.cli:main"

[project.urls]
Homepage = "https://github.com/JaydenCJ/samey"
Repository = "https://github.com/JaydenCJ/samey"
Issues = "https://github.com/JaydenCJ/samey/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
